# openenv_financial_task_env

./: .dockerignore  .gitattributes  .gitignore  Blog.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  edits.md  eval_lora.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  rewards.py  tasks.py  train_grpo.py  train_sft.py
data/: manifest.jsonl  sft_kimi_k25.jsonl
data/0/: 0_ref_0.xlsx  0_src_0.xlsx
data/118/: 118_src_0.xlsx
data/119/: 119_src_0.xlsx
data/21/: 21_ref_0.xlsx  21_src_0.xlsx
data/24/: 24_ref_0.xlsx  24_src_0.xlsx
data/34/: 34_src_0.xlsx
data/35/: 35_ref_0.xlsx  35_src_0.xlsx
data/40/: 40_ref_0.xlsx  40_src_0.xlsx
data/60/: 60_ref_0.xlsx  60_src_0.xlsx
data/67/: 67_ref_0.xlsx  67_src_0.xlsx
data/finch_50/10/: 10_ref_0.xlsx  10_src_0.xlsx
data/finch_50/105/: 105_ref_0.xlsx  105_src_0.xlsx
data/finch_50/109/: 109_ref_0.xlsx  109_src_0.xlsx
data_pipeline/: analyze_sft_logs.py  build_sft_corpus.py  compare_sft_runs.py  finch_pull.py  osworld_writer_pull.py  pptarena_pull.py
graders/: __init__.py  docx_metrics.py
runs/20260425_163514_MiniMaxAI_MiniMax-M2.1/: log.txt  results.json  summary.csv
runs/baseline_kimi_k25_eval/: log.txt  results.json  summary.csv
runs/baseline_minimax_m21_eval/: log.txt  results.json  summary.csv
runs/baseline_qwen25coder3b_eval/: log.txt  results.json  summary.csv
runs/sft_eval_v2/: cross_summary.json  raw_logs.txt
runs/teacher_kimi_k25_train/: log.txt  results.json  summary.csv
server/: Dockerfile  __init__.py  app.py  financial_environment.py
(+377 files in other folders)
