[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "financial-task-env"
version = "0.1.0"
description = "OpenEnv environment for real-world finance & accounting tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "openai",
]
inference = [
    "openai",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
